feat(holmesgpt-api): implement K8s TokenReview and SAR authentication
**Business Requirement**: DD-AUTH-014 (SOC2-compliant user attribution)

**Changes**:
- Implement TokenReview validation in Python middleware (auth.py)
- Add SubjectAccessReview (SAR) checks for API endpoints
- Update main.py to wire authentication middleware
- Add UserContext for extracting user identity from tokens
- Update OpenAPI spec with 401/403 responses
- Add RBAC manifests for service and client ServiceAccounts

**Architecture**:
- Python FastAPI middleware validates Bearer tokens via K8s API
- Kubernetes Python client for TokenReview and SAR calls
- User identity stored in request.state for audit logging
- Stateless design - no session management

**Security**:
- All API endpoints require valid ServiceAccount Bearer token
- 401 Unauthorized for missing/invalid tokens
- 403 Forbidden for insufficient SAR permissions
- User identity (username, groups, UID) extracted for audit

**Testing**:
- Integration tests use mock auth for speed
- E2E tests validate real K8s auth end-to-end

**References**:
- DD-AUTH-014: Middleware-based SAR authentication
- BR-SEC-001: SOC2 compliance requirements

--- a/holmesgpt-api/requirements.txt
+++ b/holmesgpt-api/requirements.txt
@@ -47,6 +47,11 @@ urllib3>=1.26.0,<2.0.0  # Required for prometrix compatibility
 fastapi>=0.116
 uvicorn[standard]>=0.30
 
+# Kubernetes Python client for TokenReview and SAR APIs (DD-AUTH-014)
+# Note: HolmesGPT SDK includes kubernetes client, but we explicitly specify
+# it here for clarity and to ensure the correct version for TokenReview/SAR
+kubernetes>=29.0.0
+
 # HTTP client for K8s TokenReviewer API (not used by HolmesGPT SDK)
 aiohttp>=3.9.1
 aiodns>=3.1.1
