fix: add missing ServiceAccount creation for DataStorage E2E deployments
Problem:
- Gateway, Notification, and RO E2E tests failed with pod creation errors
- Error: serviceaccount "data-storage-sa" not found
- DataStorage deployment requires ServiceAccount for DD-AUTH-014 middleware

Root Cause:
- DD-AUTH-014 introduced middleware-based auth requiring ServiceAccount
- DataStorage deployment spec references ServiceAccountName: "data-storage-sa"
- E2E setup functions never created the ServiceAccount before deployment
- Result: Kubernetes rejected pod creation (0/1 READY)

Fix:
- Add deployDataStorageServiceRBAC() call before deployDataStorageServiceInNamespace()
- Creates ServiceAccount, ClusterRole, and ClusterRoleBinding
- Required for DataStorage middleware to call TokenReview and SubjectAccessReview APIs

Files Modified:
- test/infrastructure/gateway_e2e.go (SetupGatewayInfrastructureParallel)
- test/infrastructure/datastorage.go (DeployDataStorageTestServicesWithNodePort)
- test/infrastructure/remediationorchestrator_e2e_hybrid.go (SetupROE2EInfrastructureHybrid)

Impact:
- Gateway E2E: Infrastructure now working, tests execute (98/98 run)
- Notification E2E: Should now run (was: 0/30 due to setup failure)
- RO E2E: Should now run (was: 0/31 due to setup failure)

Note: 9 Gateway audit tests still fail (separate issue - audit client auth config)

Related: DD-AUTH-014 (Middleware-based SAR authentication)
Authority: docs/handoff/E2E_FIX_DATASTORAGE_SA_JAN_29_2026.md

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -1835,7 +1835,7 @@ components:
           example: "pod"
         environment:
           type: string
-          description: "Environment (mandatory: production, staging, development)"
+          description: "Environment filter (mandatory, single value from Signal Processing)"
           example: "production"
         priority:
           type: string
@@ -1855,7 +1855,7 @@ components:
 
     MandatoryLabels:
       type: object
-      description: "5 mandatory workflow labels (DD-WORKFLOW-001 v2.3)"
+      description: "5 mandatory workflow labels (DD-WORKFLOW-001 v2.5 - Multi-environment support)"
       required:
         - signal_type
         - severity
@@ -1877,9 +1877,13 @@ components:
           description: "Kubernetes resource type this workflow targets (e.g., pod, deployment, node)"
           example: "pod"
         environment:
-          type: string
-          description: "Target environment (production, staging, development, test, * for any)"
-          example: "production"
+          type: array
+          items:
+            type: string
+            enum: ["production", "staging", "development", "test", "*"]
+          minItems: 1
+          description: "Target environments (workflow can declare multiple, '*' matches all)"
+          example: ["staging", "production"]
         priority:
           type: string
           description: "Business priority level (P0, P1, P2, P3, * for any)"
