--- a/config/gateway.yaml
+++ b/config/gateway.yaml
@@ -3,14 +3,15 @@
 # Environment variables can override these values (see ADR-030)
 
 server:
-  listen_addr: ":8080"
-  read_timeout: "30s"
-  write_timeout: "30s"
-  idle_timeout: "120s"
+  listenAddr: ":8080"
+  maxConcurrentRequests: 100  # ADR-048-ADDENDUM-001: Defense-in-depth with Nginx/HAProxy (0 = unlimited)
+  readTimeout: "30s"
+  writeTimeout: "30s"
+  idleTimeout: "120s"
 
 middleware:
-  rate_limit:
-    requests_per_minute: 100
+  rateLimit:
+    requestsPerMinute: 100
     burst: 10
 
 infrastructure:
@@ -18,11 +19,11 @@ infrastructure:
     addr: "redis-gateway:6379"
     db: 0
     password: ""  # Set via GATEWAY_REDIS_PASSWORD environment variable
-    dial_timeout: "5s"
-    read_timeout: "3s"
-    write_timeout: "3s"
-    pool_size: 10
-    min_idle_conns: 2
+    dialTimeout: "5s"
+    readTimeout: "3s"
+    writeTimeout: "3s"
+    poolSize: 10
+    minIdleConns: 2
 
 processing:
   deduplication:
@@ -30,34 +31,34 @@ processing:
 
   storm:
     # ===== EXISTING FIELDS (Storm Detection) =====
-    rate_threshold: 10        # alerts/minute for rate-based detection
-    pattern_threshold: 5      # similar alerts for pattern-based detection
-    aggregation_window: "1m"  # DEPRECATED: Use inactivity_timeout for DD-GATEWAY-008
+    rateThreshold: 10        # alerts/minute for rate-based detection
+    patternThreshold: 5      # similar alerts for pattern-based detection
+    aggregationWindow: "1m"  # DEPRECATED: Use inactivityTimeout for DD-GATEWAY-008
 
     # ===== NEW FIELDS (DD-GATEWAY-008: Buffered First-Alert Aggregation) =====
     # Buffered first-alert configuration (BR-GATEWAY-016)
-    buffer_threshold: 5       # Alerts to buffer before creating window (default: 5)
+    bufferThreshold: 5       # Alerts to buffer before creating window (default: 5)
 
     # Sliding window configuration (BR-GATEWAY-008)
-    inactivity_timeout: "60s" # Sliding window timeout (resets on each alert)
-    max_window_duration: "5m" # Maximum window duration (safety limit)
+    inactivityTimeout: "60s" # Sliding window timeout (resets on each alert)
+    maxWindowDuration: "5m" # Maximum window duration (safety limit)
 
     # Multi-tenant isolation configuration (BR-GATEWAY-011)
-    default_max_size: 1000    # Default namespace buffer size
-    global_max_size: 5000     # Global buffer limit across all namespaces
-    # per_namespace_limits:   # Optional per-namespace overrides
+    defaultMaxSize: 1000    # Default namespace buffer size
+    globalMaxSize: 5000     # Global buffer limit across all namespaces
+    # perNamespaceLimits:   # Optional per-namespace overrides
     #   prod-api: 2000        # Example: prod-api gets 2000 buffer size
     #   dev-test: 500         # Example: dev-test gets 500 buffer size
 
     # Overflow handling configuration (BR-GATEWAY-011)
-    sampling_threshold: 0.95  # Utilization to trigger sampling (95%)
-    sampling_rate: 0.5        # Sample rate when threshold reached (50%)
+    samplingThreshold: 0.95  # Utilization to trigger sampling (95%)
+    samplingRate: 0.5        # Sample rate when threshold reached (50%)
 
   environment:
-    cache_ttl: "30s"
-    configmap_namespace: "kubernaut-system"
-    configmap_name: "kubernaut-environment-overrides"
+    cacheTtl: "30s"
+    configmapNamespace: "kubernaut-system"
+    configmapName: "kubernaut-environment-overrides"
 
   priority:
-    policy_path: "/etc/gateway/policies/priority.rego"
+    policyPath: "/etc/gateway/policies/priority.rego"
 
