feat(datastorage): Standardize DataStorage port to 8080 across all E2E tests
AUTHORITY: DD-AUTH-014 (Middleware-Based Authentication)

Root Cause Analysis (from RemediationOrchestrator E2E must-gather):
❌ RO controller audit events: "dial tcp: lookup datastorage: no such host"
❌ Audit buffer: 0 events sent (100% failure rate)
✅ Audit events: Created and buffered correctly
🔍 Problem: Port mismatch between config (8080) and infrastructure (8081)

Historical Context:
- DataStorage originally ran on port 8080
- TD-E2E-001: Port changed to 8081 when oauth2-proxy was added (proxy on 8080)
- DD-AUTH-014: oauth2-proxy removed, middleware auth implemented
- Result: Port 8081 was a workaround, no longer needed

Authoritative Change:
Make port 8080 the single source of truth for DataStorage across:
✅ Container port: 8080
✅ Service port: 8080
✅ Config files: server.port = 8080
✅ Kind extraPortMappings: hostPort 8080
✅ Client URLs: localhost:8080
✅ All E2E infrastructure and tests

Files Changed:
• test/infrastructure/datastorage.go (container, service, probes, config)
• test/infrastructure/remediationorchestrator_e2e_hybrid.go (audit config)
• test/infrastructure/workflowexecution_e2e_hybrid.go (client URL)
• test/infrastructure/workflowexecution_parallel.go (client URL)
• test/infrastructure/gateway_e2e.go (data_storage_url)
• test/infrastructure/kind-*-config.yaml (hostPort mappings)
• test/e2e/*/suite_test.go (dataStorageURL constants)
• test/e2e/workflowexecution/02_observability_test.go (client URLs)
• test/e2e/remediationorchestrator/audit_wiring_e2e_test.go (client URL)
• test/e2e/datastorage/23_sar_access_control_test.go (comment)

Impact:
- Eliminates port confusion (8080 vs 8081)
- Fixes RO E2E audit failures (4 tests)
- Aligns with DD-AUTH-014 architecture (no proxy)
- Simplifies port allocation (TD-E2E-001)

Architecture:
Before: Service:8080 → oauth2-proxy:8080 → DataStorage:8081
After:  Service:8080 → DataStorage:8080 (DD-AUTH-014 middleware)

Test: go build ./tes

--- a/deploy/data-storage/client-rbac-v2.yaml
+++ b/deploy/data-storage/client-rbac-v2.yaml
@@ -1,24 +1,25 @@
 ---
 # ========================================
-# DD-AUTH-011: Granular RBAC for DataStorage Access
-# OAuth2-Proxy SAR: verb:"create" (single global check)
-# Authority: DD-AUTH-011 (User Approved: January 26, 2026)
+# DD-AUTH-014: Middleware-Based RBAC for DataStorage Access
+# Middleware SAR: Full CRUD permissions (create, get, list, update, delete)
+# Authority: DD-AUTH-014 (Middleware-based authentication) - User Approved: January 26, 2026
 # ========================================
 #
 # This RBAC configuration enables 8 services to authenticate with DataStorage
-# via the oauth2-proxy sidecar using ServiceAccount tokens.
+# via middleware-based authentication using ServiceAccount tokens.
 #
 # Flow:
-# 1. Service → oauth-proxy (with ServiceAccount token in Authorization header)
-# 2. oauth-proxy validates token
-# 3. oauth-proxy performs Subject Access Review (SAR) with verb:"create"
-# 4. oauth-proxy injects X-Auth-Request-User header
-# 5. DataStorage receives authenticated request
+# 1. Service → DataStorage/HAPI (with ServiceAccount Bearer token in Authorization header)
+# 2. Middleware validates token via TokenReview API
+# 3. Middleware performs Subject Access Review (SAR) for CRUD permissions
+# 4. Middleware injects X-Auth-Request-User header for audit attribution
+# 5. Service handler processes authenticated request
 #
 # Services (8 total):
 # - Gateway, AIAnalysis, WorkflowExecution, RemediationOrchestrator (kubernaut-system)
 # - Notification (kubernaut-notifications namespace)
-# - AuthWebhook, SignalProcessing, holmesgpt-api (kubernaut-system)
+# - AuthWebhook, SignalProcessing (kubernaut-system)
+# - HolmesGPT API (kubernaut-ai namespace)
 #
 # Audit Tracking:
 # - DataStorage audit logs capture all workflow endpoint access
@@ -71,7 +72,7 @@ roleRef:
   name: data-storage-client
 subjects:
   - kind: ServiceAccount
-    name: gateway-sa
+    name: gateway
     namespace: kubernaut-system
 
 ---
@@ -90,7 +91,7 @@ roleRef:
   name: data-storage-client
 subjects:
   - kind: ServiceAccount
-    name: aianalysis-sa
+    name: aianalysis
     namespace: kubernaut-system
 
 ---
@@ -109,7 +110,7 @@ roleRef:
   name: data-storage-client
 subjects:
   - kind: ServiceAccount
-    name: workflowexecution-sa
+    name: workflowexecution
     namespace: kubernaut-system
 
 ---
@@ -128,7 +129,7 @@ roleRef:
   name: data-storage-client
 subjects:
   - kind: ServiceAccount
-    name: remediationorchestrator-sa
+    name: remediationorchestrator
     namespace: kubernaut-system
 
 ---
@@ -167,7 +168,7 @@ roleRef:
   name: data-storage-client
 subjects:
   - kind: ServiceAccount
-    name: authwebhook-sa
+    name: authwebhook
     namespace: kubernaut-system
 
 ---
@@ -186,7 +187,7 @@ roleRef:
   name: data-storage-client
 subjects:
   - kind: ServiceAccount
-    name: signalprocessing-sa
+    name: signalprocessing
     namespace: kubernaut-system
 
 ---
@@ -205,8 +206,8 @@ roleRef:
   name: data-storage-client
 subjects:
   - kind: ServiceAccount
-    name: holmesgpt-api-sa
-    namespace: kubernaut-system
+    name: holmesgpt-api
+    namespace: kubernaut-ai
 
 ---
 # RoleBinding: Grant DataStorage ServiceAccount self-access (self-auditing)
