fix(e2e): Assign unique DataStorage dependency ports for parallel RO/WE E2E tests
Per DD-TEST-001 port allocation strategy, assign unique host ports for
DataStorage dependencies to enable parallel E2E test execution:
- RemediationOrchestrator → DataStorage: localhost:8089
- WorkflowExecution → DataStorage: localhost:8092

This resolves "bind: address already in use" conflicts when running
RO and WE E2E tests concurrently, as both previously used port 8081.

Port Mapping:
- RO: hostPort 8089 → NodePort 30081 → DataStorage pod:8080
- WE: hostPort 8092 → NodePort 30081 → DataStorage pod:8080

Changes:
1. Updated DD-TEST-001 (AUTHORITATIVE):
   - Added RO → DataStorage dependency: 8089
   - Added WE → DataStorage dependency: 8092

2. Updated Kind cluster configs:
   - kind-remediationorchestrator-config.yaml: 8081 → 8089
   - kind-workflowexecution-config.yaml: 8081 → 8092

3. Updated test infrastructure and E2E test files (8 files total):
   - RO suite_test.go, audit_wiring_e2e_test.go
   - WE 02_observability_test.go, workflowexecution_e2e_hybrid.go,
     workflowexecution_parallel.go

All E2E tests can now run in parallel without port conflicts.

--- a/test/infrastructure/kind-workflowexecution-config.yaml
+++ b/test/infrastructure/kind-workflowexecution-config.yaml
@@ -13,7 +13,7 @@ nodes:
     protocol: TCP
   # Data Storage for BR-WE-005 audit events (per DD-TEST-001)
   - containerPort: 30081  # Data Storage HTTP NodePort
-    hostPort: 8081        # Port on host machine (localhost:8081 per DD-TEST-001)
+    hostPort: 8092        # DD-TEST-001: WE → DataStorage dependency (avoids conflicts with RO:8089, DS:8081)
     protocol: TCP
   # DD-TEST-007: Mount coverage directory for E2E coverage collection
   # Controller pods run on control-plane node, so coverage must be accessible here
