--- a/test/infrastructure/kind-remediationorchestrator-config.yaml
+++ b/test/infrastructure/kind-remediationorchestrator-config.yaml
@@ -28,8 +28,8 @@ nodes:
   # This eliminates kubectl port-forward instability for E2E tests
   extraPortMappings:
   # DataStorage API Port (for audit event queries in E2E tests)
-  - containerPort: 30081
-    hostPort: 8081  # DD-TEST-001: DataStorage host port allocation
+  - containerPort: 30081  # DataStorage NodePort in cluster
+    hostPort: 8089        # DD-TEST-001: RO → DataStorage dependency (avoids conflicts with WE:8092, DS:8081)
     protocol: TCP
   # API Port (if needed in future)
   - containerPort: 30083
