fix(e2e): Fix DataStorage Service DNS hostname across all E2E configs
Root cause: Controllers and HAPI were connecting to hostname "datastorage"
but the Kubernetes Service is named "data-storage-service", causing DNS
lookup failures: "dial tcp: lookup datastorage on 10.96.0.10:53: no such host"

This prevented audit events from reaching DataStorage despite controllers
correctly buffering and attempting to flush events (67 events buffered but
all dropped due to network errors).

Per DD-AUTH-011: Service name must match production "data-storage-service"
for SAR consistency.

Changes:
- RemediationOrchestrator config: datastorage → data-storage-service
- AIAnalysis config: datastorage → data-storage-service (3 refs)
- HolmesGPT API config: datastorage → data-storage-service (2 refs)
- AuthWebhook deployment: datastorage → data-storage-service

Note: SignalProcessing already used correct "datastorage-service" hostname.

Evidence from controller logs:
- ✅ Audit emission working (67 events buffered)
- ✅ Background worker running (1500+ timer ticks)
- ❌ All batch writes failed with "no such host"
- ❌ AUDIT DATA LOSS: Dropped 67 events after max retries

Handoff doc created: docs/handoff/AUDIT_EMISSION_MISSING_JAN_30_2026.md

--- a/test/e2e/authwebhook/manifests/authwebhook-deployment.yaml
+++ b/test/e2e/authwebhook/manifests/authwebhook-deployment.yaml
@@ -101,7 +101,7 @@ spec:
               value: "debug"
             # Data Storage Configuration
             - name: DATA_STORAGE_URL
-              value: "http://datastorage:8080"
+              value: "http://data-storage-service:8080"  # DD-AUTH-011: Match Service name
             # Coverage Configuration (DD-TEST-007)
             - name: GOCOVERDIR
               value: "/coverdata"
