fix(e2e): Fix Notification DataStorage DNS hostname (DD-AUTH-011)
Changed datastorage → data-storage-service in ConfigMap.
Same DNS standardization as RO/WE/AuthWebhook fixes.

Root Cause: Wrong DNS hostname prevented controller from reaching DataStorage
Result: All audit tests showed 0 events (HTTP connection failed)

Expected: NT 23/30 → 30/30 with both SA + DNS fixes

--- a/test/e2e/notification/manifests/notification-configmap.yaml
+++ b/test/e2e/notification/manifests/notification-configmap.yaml
@@ -89,7 +89,7 @@ data:
       # Used for audit event emission and persistent storage
       # Format: http://{service}.{namespace}.svc.cluster.local:{port}
       # NOTE: ${NAMESPACE} is substituted by envsubst during deployment
-      data_storage_url: "http://datastorage.${NAMESPACE}.svc.cluster.local:8080"
+      data_storage_url: "http://data-storage-service.${NAMESPACE}.svc.cluster.local:8080"
 
 # ========================================
 # Deployment Integration (ADR-030 Pattern)
