--- a/deploy/gateway/02-configmap.yaml
+++ b/deploy/gateway/02-configmap.yaml
@@ -15,15 +15,15 @@ data:
 
     # HTTP Server configuration
     server:
-      listen_addr: ":8080"
-      read_timeout: 30s
-      write_timeout: 30s
-      idle_timeout: 120s
+      listenAddr: ":8080"
+      readTimeout: 30s
+      writeTimeout: 30s
+      idleTimeout: 120s
 
     # Middleware configuration
     middleware:
-      rate_limit:
-        requests_per_minute: 100
+      rateLimit:
+        requestsPerMinute: 100
         burst: 10
 
     # DD-GATEWAY-012: Redis REMOVED - Gateway is now Redis-free (K8s-native)
@@ -35,14 +35,14 @@ data:
         ttl: 5m
 
       storm:
-        rate_threshold: 10
-        pattern_threshold: 5
-        aggregation_window: 1m
+        rateThreshold: 10
+        patternThreshold: 5
+        aggregationWindow: 1m
 
       environment:
-        cache_ttl: 30s
-        configmap_namespace: kubernaut-system
-        configmap_name: kubernaut-environment-overrides
+        cacheTtl: 30s
+        configmapNamespace: kubernaut-system
+        configmapName: kubernaut-environment-overrides
 
   priority.rego: |
     # Priority Assignment Policy for Gateway Service
