fix(gateway): Fix DataStorage Service port 8081→8080 (DD-AUTH-011)
Root Cause: Gateway E2E config had wrong DataStorage Service port
- Used: http://data-storage-service:8081
- Correct: http://data-storage-service:8080

Evidence:
- RemediationOrchestrator (working): uses port 8080
- Gateway config comment: says 'use Service port 8080'
- Gateway config value: contradicted comment (copy-paste error)

Impact:
- 10 audit test failures (signal.received, signal.deduplicated, crd.created)
- Gateway ServiceAccount + RBAC were correct
- OpenAPI client was correctly configured
- Only the port was wrong → HTTP 404/503 errors

Expected Result: Gateway 88/98 → 98/98 (100%)

Authority: DD-AUTH-011 (Service Name Standard)

--- a/test/e2e/gateway/gateway-deployment.yaml
+++ b/test/e2e/gateway/gateway-deployment.yaml
@@ -34,8 +34,8 @@ data:
       # ADR-032: Data Storage URL is MANDATORY for P0 services (Gateway)
       # DD-API-001: Gateway uses OpenAPI client to communicate with Data Storage
       # Service name: data-storage-service (matches production, required for SAR)
-      # Port 8081: DataStorage listens on 8081, Service exposes as 8080 → use Service port
-      dataStorageUrl: "http://data-storage-service.kubernaut-system.svc.cluster.local:8081"
+      # Port: 8080 (Service port) - DataStorage container listens on 8081, Service exposes as 8080
+      dataStorageUrl: "http://data-storage-service.kubernaut-system.svc.cluster.local:8080"
 
     processing:
       # NOTE: Deduplication is now status-based (DD-GATEWAY-011)
