--- a/deploy/data-storage/configmap.yaml
+++ b/deploy/data-storage/configmap.yaml
@@ -8,8 +8,8 @@ data:
     server:
       port: 8081  # DD-AUTH-004: Internal port (oauth-proxy listens on 8080, proxies to 8081)
       host: "0.0.0.0"
-      read_timeout: "30s"
-      write_timeout: "30s"
+      readTimeout: "30s"
+      writeTimeout: "30s"
 
     logging:
       level: "info"
