--- a/deploy/gateway/base/02-configmap.yaml
+++ b/deploy/gateway/base/02-configmap.yaml
@@ -15,10 +15,10 @@ data:
 
     # HTTP Server configuration
     server:
-      listen_addr: ":8080"
-      read_timeout: 30s
-      write_timeout: 30s
-      idle_timeout: 120s
+      listenAddr: ":8080"
+      readTimeout: 30s
+      writeTimeout: 30s
+      idleTimeout: 120s
 
     # Middleware configuration
     middleware:
@@ -33,7 +33,7 @@ data:
     infrastructure:
       # DD-AUDIT-003: Data Storage URL for audit event emission
       # Gateway emits audit events for signal processing (signal.received, signal.deduplicated, storm.detected)
-      data_storage_url: "http://data-storage-service:8080"
+      dataStorageUrl: "http://data-storage-service:8080"
 
     # Business logic configuration
     processing:
