fix(test): Restore ServiceAccount creation before workflow seeding
Root Cause:
- ServiceAccount needed BEFORE workflow seeding (in Phase 7a)
- But was being created AFTER in test suite BeforeSuite
- Workflow seeding failed: serviceaccounts "aianalysis-e2e-sa" not found

The Fix:
- Restored SA creation in infrastructure code (Phase 7a)
- Happens BEFORE Phase 7b (workflow seeding)
- Test suite now only retrieves token (no creation)

Execution Order (correct):
1. CreateAIAnalysisClusterHybrid() called
2. Phase 7a: Deploy DataStorage + Create SA
3. Phase 7b: Seed workflows (uses SA token)
4. BeforeSuite: Retrieve SA token for tests

Related: a58e6eeb4 (context fix)

--- a/test/integration/holmesgptapi/config/config.yaml
+++ b/test/integration/holmesgptapi/config/config.yaml
@@ -4,29 +4,32 @@
 # This file is mounted into DataStorage container at /etc/datastorage/config.yaml
 # and referenced via CONFIG_PATH environment variable
 
+service:
+  name: data-storage
+  metricsPort: 9090
+  logLevel: debug
+  shutdownTimeout: 30s
+
 server:
   port: 8080
   host: "0.0.0.0"
-  readTimeout: "30s"
-  writeTimeout: "30s"
-
-logging:
-  level: "debug"  # Debug level for integration tests
-  format: "json"
+  readTimeout: 30s
+  writeTimeout: 30s
 
 database:
   # PostgreSQL accessible via host.containers.internal (DD-TEST-001: port 15439)
   host: host.containers.internal
   port: 15439
-  name: "action_history"
-  user: "slm_user"
-  sslMode: "disable"
+  name: action_history
+  user: slm_user
+  sslMode: disable
   maxOpenConns: 25
   maxIdleConns: 5
-  connMaxLifetime: "5m"
-  connMaxIdleTime: "10m"
+  connMaxLifetime: 5m
+  connMaxIdleTime: 10m
   # ADR-030 Section 6: Secrets loaded from mounted files
-  secretsFile: "/etc/datastorage-secrets/database-credentials.yaml"
+  secretsFile: "/etc/datastorage/database-credentials.yaml"
+  usernameKey: "username"
   passwordKey: "password"
 
 redis:
@@ -34,10 +37,13 @@ redis:
   addr: host.containers.internal:16387
   db: 0
   # DD-009: Redis used for Dead Letter Queue (DLQ) fallback
-  dlqStreamName: "audit:dlq:notification"
+  dlqStreamName: audit:dlq:notification
   dlqMaxLen: 10000
-  dlqConsumerGroup: "datastorage-dlq-consumers"
+  dlqConsumerGroup: datastorage-dlq-consumers
   # ADR-030 Section 6: Secrets loaded from mounted files
-  secretsFile: "/etc/datastorage-secrets/redis-credentials.yaml"
+  secretsFile: "/etc/datastorage/redis-credentials.yaml"
   passwordKey: "password"
 
+logging:
+  level: debug
+  format: json
