fix(config): Configure HAPI middleware to use correct service name
ROOT CAUSE (proper analysis):
- Service name: 'holmesgpt-api'
- Middleware default: 'holmesgpt-api-service' (hardcoded in main.py:393)
- Mismatch caused HTTP 403 (SAR check for wrong resource)

WRONG FIX (commit d384b39c7):
- Added both names to RBAC (workaround, not root cause fix)

CORRECT FIX:
- Configure middleware to use actual service name
- Added 'auth.resource_name: holmesgpt-api' to HAPI config
- RBAC uses single correct name: 'holmesgpt-api'

Files Modified:
- test/infrastructure/aianalysis_e2e.go: Added auth.resource_name config
- deploy/holmesgpt-api/14-client-rbac.yaml: Single service name

Middleware reads config (main.py:393):
  resource_name=self.config.get('resource_name', 'holmesgpt-api-service')
  Now gets 'holmesgpt-api' from config → SAR check matches RBAC

Expected: 36/36 tests passing (SAR checks correct service name)

Related: d384b39c7 (reverted workaround)

--- a/deploy/holmesgpt-api/14-client-rbac.yaml
+++ b/deploy/holmesgpt-api/14-client-rbac.yaml
@@ -37,11 +37,9 @@ metadata:
 rules:
   # DD-AUTH-014 middleware SAR check: Can the ServiceAccount "get" the holmesgpt-api service?
   # This is the authorization check performed by DD-AUTH-014 middleware
-  # Note: Middleware checks for "holmesgpt-api-service" (hardcoded in main.py:393)
-  # but actual service name is "holmesgpt-api" - grant both for compatibility
   - apiGroups: [""]
     resources: ["services"]
-    resourceNames: ["holmesgpt-api", "holmesgpt-api-service"]
+    resourceNames: ["holmesgpt-api"]
     verbs: ["get"]
 
 ---
