fix(hapi-tests): Fix DataStorage import and metrics access patterns
Applied fixes for HAPI INT test failures (9 failed → expect 2-3 after rebuild).

Fix 1: DataStorage Client Import Typo (4 tests)
- File: holmesgpt-api/tests/integration/conftest.py:368
- Issue: from datastorage.apis import WorkflowCatalogAPIApi (plural)
- Fix: from datastorage.api import WorkflowCatalogAPIApi (singular)
- Impact: Fixes ModuleNotFoundError in workflow catalog tests

Fix 2: Metrics Access Pattern (3 tests)
- File: holmesgpt-api/tests/integration/test_hapi_metrics_integration.py
- Issue: Accessing private Histogram._count attribute (lines 222, 329)
- Fix: Use CollectorRegistry.collect() pattern (public API)
- Pattern: Query registry for samples with 'investigations_duration' + '_count'
- Impact: Fixes AttributeError in metrics tests

Remaining Issues (require separate investigation):
- 2 workflow catalog tests: Mock LLM returning invalid workflow IDs
  (workflow '42b90a37-0d1b-5561-911a-2939ed9e1c30' not in catalog)

Next Step: Rebuild test container to pick up these fixes
- make build-holmesgpt-api-integration-test-image
- make test-integration-holmesgpt-api

Related: HAPI_INT_TEST_FAILURES_RCA_JAN_31_2026.md

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -1568,14 +1568,15 @@ components:
           type: string
           minLength: 1
           maxLength: 50
-          enum: [gateway, notification, analysis, signalprocessing, workflow, workflowexecution, orchestration, webhook]
+          enum: [gateway, notification, analysis, aiagent, signalprocessing, workflow, workflowexecution, orchestration, webhook]
           description: |
-            Service-level event category (ADR-034 v1.5).
+            Service-level event category (ADR-034 v1.6).
             Per ADR-034 v1.2: event_category MUST match the service name that emits the event.
             Values:
             - gateway: Gateway Service
             - notification: Notification Service
-            - analysis: AI Analysis Service
+            - analysis: AI Analysis Controller (NOT HolmesGPT API)
+            - aiagent: AI Agent Provider (HolmesGPT API) - autonomous tool-calling agent
             - signalprocessing: Signal Processing Service
             - workflow: Workflow Catalog Service
             - workflowexecution: WorkflowExecution Controller (ADR-034 v1.5)
