fix(rbac): Change HolmesGPT-API client verb from 'get' to 'create'
FINAL ROOT CAUSE (after 14+ hours):
Auth logs revealed: middleware checks 'verb=create' but RBAC grants 'verb=get'

Evidence from logs (with handler fix applied):
{'event': 'sar_check_completed',
 'verb': 'create',  # Middleware checking this
 'allowed': False,  # RBAC doesn't grant it!
 'reason': 'none'}

Verification:
$ kubectl auth can-i get services/holmesgpt-api → yes
$ kubectl auth can-i create services/holmesgpt-api → no  # ← The issue!

The Fix:
Changed verb from 'get' to 'create' in both:
- test/infrastructure/aianalysis_e2e.go (E2E RBAC, line 643)
- deploy/holmesgpt-api/14-client-rbac.yaml (Production RBAC, line 43)

Why 'create' verb:
- DD-AUTH-014 middleware hardcodes verb='create' (main.py:399)
- Represents 'permission to use the service' (not literal creation)
- Standard pattern for service access authorization in DD-AUTH-014

Expected Result: 36/36 tests passing (100%)

Related: 121428585 (handler fix that revealed this), 38d5c2ed7 (logging RCA)

--- a/deploy/holmesgpt-api/14-client-rbac.yaml
+++ b/deploy/holmesgpt-api/14-client-rbac.yaml
@@ -35,12 +35,13 @@ metadata:
     app.kubernetes.io/name: holmesgpt-api
     app.kubernetes.io/component: rbac
 rules:
-  # DD-AUTH-014 middleware SAR check: Can the ServiceAccount "get" the holmesgpt-api service?
+  # DD-AUTH-014 middleware SAR check: Can the ServiceAccount "create" the holmesgpt-api service?
+  # Note: 'create' verb represents "permission to use the service" in this context
   # This is the authorization check performed by DD-AUTH-014 middleware
   - apiGroups: [""]
     resources: ["services"]
     resourceNames: ["holmesgpt-api"]
-    verbs: ["get"]
+    verbs: ["create"]  # Changed from 'get' to match middleware SAR check
 
 ---
 # RoleBinding: Grant AIAnalysis Controller ServiceAccount access to HolmesGPT API
