--- a/pkg/gateway/config/testdata/malformed-config.yaml
+++ b/pkg/gateway/config/testdata/malformed-config.yaml
@@ -1,11 +1,11 @@
 # Malformed YAML file for testing error handling
 
 server:
-  listen_addr: ":8080"
-  read_timeout: "30s"
+  listenAddr: ":8080"
+  readTimeout: "30s"
   # Missing closing quote
-  write_timeout: "30s
-  idle_timeout: "120s"
+  writeTimeout: "30s
+  idleTimeout: "120s"
 
 # Invalid indentation
 middleware:
