--- a/pkg/gateway/config/testdata/valid-config.yaml
+++ b/pkg/gateway/config/testdata/valid-config.yaml
@@ -2,10 +2,10 @@
 # Used for testing configuration loading
 
 server:
-  listen_addr: ":8080"
-  read_timeout: "30s"
-  write_timeout: "30s"
-  idle_timeout: "120s"
+  listenAddr: ":8080"
+  readTimeout: "30s"
+  writeTimeout: "30s"
+  idleTimeout: "120s"
 
 middleware:
   # Rate limiting removed (ADR-048) - delegated to Ingress/Route proxy
@@ -14,11 +14,11 @@ infrastructure:
   redis:
     addr: "redis-gateway:6379"
     db: 0
-    dial_timeout: "5s"
-    read_timeout: "3s"
-    write_timeout: "3s"
-    pool_size: 10
-    min_idle_conns: 2
+    dialTimeout: "5s"
+    readTimeout: "3s"
+    writeTimeout: "3s"
+    poolSize: 10
+    minIdleConns: 2
 
 processing:
   deduplication:
